<resources>
    <string name="app_name">ChefTyron</string>
    <string-array name="measurements_array">
        <item>"tsp"</item>
        <item>"tbsp"</item>
        <item>"ml"</item>
        <item>"mg"</item>
        <item>"unit"</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Tab string values-->
    <string name="ingredientsButton">Ingredients</string>


    <!--  Ingredients Screen  -->
    <string name="ingredientsText">Ingredients Owned</string>
    <string name="quantityText">Quantity</string>
    <string name="ingredientsAddText">Add</string>
    <string name="ingredientsRemoveText">Remove</string>
    <string name="ingredientsAddButton">Add</string>

    <!--    Ingredients Adapter-->
    <string name="ingredientsItemText">Ingredient Item</string>
    <string name="ingredientsQuantityText">Qty</string>
    <string name="ingredientsAdd">Add</string>
    <string name="ingredientsRemove">Remove</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingredientsAddHint">Enter new Ingredient</string>
    <string name="ingredientsQtyHint">Qty</string>
    <string name="RecipesButton">Recipes</string>
    <string name="GroceryListButton">Grocery List</string>
    <string name="title_activity_recipes_page">RecipesPage</string>
    <string name="title_activity_grocerylist_page">GrocerylistPage</string>
    <string name="popuptitle">Enter Grocery Item</string>
    <string name="newRecipeTitle">Add New Recipe</string>
    <string name="recipeName">Insert Recipe Name</string>
    <string name="recipeServingSize">Serving Size</string>
    <string name="recipeCookTime">Cook Time(Minutes)</string>
    <string name="recipeTextBox">Add Recipe Here</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="createGroceries">Create Groceries List</string>
    <string name="title_activity_create_recipe">createRecipe</string>
    <string name="title_activity_recipe_screen">RecipeScreen</string>
</resources>