<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newRecipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/newRecipeTitle"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:paddingTop="10dp"
            android:textSize="20sp"

            />
        <EditText
            android:id="@+id/recipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newRecipeTitle"
            android:hint="@string/recipeName"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/recipeServingSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeName"
            android:hint="@string/recipeServingSize"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/recipeCookTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recipeServingSize"
            android:hint="@string/recipeCookTime"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/recipeTextBox"
            android:background="@drawable/custom_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="40dp"
            android:layout_below="@+id/recipeCookTime"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="top|start"

            android:hint="@string/recipeTextBox" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@+id/recipeTextBox"
            android:text="@string/addRecipe"
            android:textAlignment="center"/>

    </RelativeLayout>


</LinearLayout>