<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IngredientsPage">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            app:popupTheme="@style/AppTheme.PopupOverlay"-->
<!--            />-->

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ingredientsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingredientsButton" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/ingredientsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <TableRow
            android:id="@+id/ingredientsColumnHeaders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/ingredientsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/ingredientsText"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="@string/quantityText"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ingredientsAddText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="15"
                android:text="@string/ingredientsAddText"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ingredientsRemoveText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="15"
                android:text="@string/ingredientsRemoveText"
                android:textColor="#000"
                android:textSize="20sp" />


        </TableRow>
    </TableLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsrView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/ingredientItemEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <EditText
            android:id="@+id/ingredientQuantityEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/ingredientsQtyHint"/>



        <Button
            android:id="@+id/ingredientsAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ingredientsAddHint"



            android:text="@string/ingredientsAddButton" />
    </LinearLayout>


</LinearLayout>